Admin console, users table change

--- a/src/views/admin/partials/header.ejs
+++ b/src/views/admin/partials/header.ejs
@@ -23,7 +23,7 @@
         <li id="login">
           <a href="/users/profile">
             <i class="fa-solid fa-circle-user"></i>
-            <span class="login"><%= user.firstName %></span>
+            <span class="login"><%= user.first_name %></span>
           </a>
         </li>
       </ul>
