--- a/src/views/admin/users.ejs
+++ b/src/views/admin/users.ejs
@@ -44,13 +44,7 @@
                                     </td>
                                     <td>
                                         <div class="options">
-
-                                            <a href=<%=`users/${user.id}/edit`%>>
-                                                <i class="fa-regular fa-pen-to-square"></i>
-                                            </a>
-                                            <a href=<%=`users/${user.id}`%>>
-                                                <i class="fa-regular fa-eye"></i>
-                                            </a>
+                                            <input type="checkbox" name="switch-button" id="switch-label" class="switch-button__checkbox" >
                                         </div>
                                     </td>
                                 </tr>
