--- a/src/views/admin/product.ejs
+++ b/src/views/admin/product.ejs
@@ -2,12 +2,10 @@
 <%- include("../partials/head") %>
 
     <body class="admin">
-        <%- include("./partials/header.ejs") %>
+        <%- include("/partials/header.ejs") %>
             <main>
                 <h1>Consola de administrador</h1>
-                <header>
                     <h2>Producto</h2>
-                </header>
                 <div class="detail">
                     <div class="panel">
                         <img src=<%=`/images/products/${product.image}` %> alt="Product image" width="100%" %>>
