--- a/src/views/admin/productEdit.ejs
+++ b/src/views/admin/productEdit.ejs
@@ -19,9 +19,9 @@
             </script>
             <main>
                 <h1>Consola de administrador</h1>
-                <header>
+                <div>
                     <h2>Producto</h2>
-                </header>
+                </div>
                 <form action=<%=`/admin/products/${product.id}?_method=PUT` %> method="POST"
                     enctype="multipart/form-data">
                     <div class="form-control">
