--- a/src/views/admin/productNew.ejs
+++ b/src/views/admin/productNew.ejs
@@ -5,9 +5,9 @@
         <%- include("./partials/header.ejs") %>
         <main>
             <h1>Consola de administrador</h1>
-            <header>
+            <div>
                 <h2>Crear Producto</h2>
-            </header>
+            </div>
             <form action="/admin/products" method="POST" enctype="multipart/form-data">
                 <div class="form-control">
                     <label for="name">Nombre:</label>
