--- a/src/views/admin/users.ejs
+++ b/src/views/admin/users.ejs
@@ -5,9 +5,9 @@
         <%- include("./partials/header.ejs") %>
             <main>
                 <h1>Consola de administrador</h1>
-                <header>
+                <div class="productConsole">
                     <h2>Usuarios</h2>
-                </header>
+                </div>
                 <% if(users.length> 0){ %>
                     <table>
                         <thead>
