--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,41 +1,24 @@
-<footer>
-    <nav class="footer-navbar">
-        <ul class="footer-navbar-items">
-            <h3>Nosotros</h3>
-            <li>Quiénes somos</li>
-            <li>Contacto</li>
-            <li>Sumate con nosotros</li>
-        </ul>
-        <ul class="footer-navbar-items">
-            <h3>Ayuda</h3>
-            <li>Preguntas frecuentes</li>
-            <li>Dejá tu consulta</li>
-        </ul>
-        <ul class="footer-navbar-items">
-            <h3>Locales</h3>
-            <li>Santa Fe</li>
-            <li>Buenos Aires</li>
-            <li>Corrientes</li>
-            <li>Córdoba</li>
-            <li>Río Negro</li>
-        </ul>
-        <ul class="footer-navbar-items">
-            <h3>Servicios</h3>
-            <li>Empresas</li>
-            <li>Mayoristas</li>
-        </ul>
-    </nav>
-    <div class="footer-div-links">
-        <div id="social-media">
-            <a href=""><i class="fa-brands fa-pinterest"></i></i></a>
-            <a href=""><i class="fa-brands fa-facebook"></i></i></a>
-            <a href=""><i class="fa-brands fa-instagram"></i></i></a>
-            <a href=""><i class="fa-brands fa-twitter"></i></i></a>
-            <a href=""><i class="fa-brands fa-youtube"></i></i></a>
-            <a href=""><i class="fa-brands fa-tiktok"></i></i></a>
-        </div>
-        <div id="copyright">
-            <span>© 2022 FlyFeet</span>
-        </div>
-    </div>
-</footer>
+<ul>
+  <li><h3>Nosotros</h3></li>
+  <li>Quienes somos</li>
+  <li>Contacto</li>
+  <li>Sumate con nosotros</li>
+</ul>
+<ul>
+  <li><h3>Ayuda</h3></li>
+  <li>Preguntas frecuentes</li>
+  <li>Dejá tu consulta</li>
+</ul>
+<ul>
+  <li><h3>Locales</h3></li>
+  <li>Santa Fe</li>
+  <li>Buenos Aires</li>
+  <li>Corrientes</li>
+  <li>Córdoba</li>
+  <li>Río Negro</li>
+</ul>
+<ul>
+  <li><h3>Servicios</h3></li>
+  <li>Empresas</li>
+  <li>Mayoristas</li>
+</ul>
