--- a/src/views/users/registerRedirect.ejs
+++ b/src/views/users/registerRedirect.ejs
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <!--head/partial-->
-    <%- include('../partials/head') %>
-    <!--fin head/partial-->
-    <link rel="stylesheet" href="/stylesheets/redirection.css" />
-  </head>
+<!--  Include de head -->
+<%- include('../partials/head') %>
   <body>
     <!--header/partial-->
     <%- include('../partials/header') %>
