--- a/src/views/products/detail.ejs
+++ b/src/views/products/detail.ejs
@@ -1,46 +1,29 @@
 <!--  Include de head -->
 <%- include("../partials/head.ejs") %>
 
-    <body class="product-detail">
+    <body id="productDetail">
         <%- include("../partials/header.ejs") %>
-        <main>
-            <header>
-                <h2>Producto</h2>
-            </header>
-            <div class="detail">
-                <div class="panel">
-                    <img src=<%=`/images/products/${product.image}` %> alt="Product image" width="100%" %>>
-                </div>
-                <div class="panel">
-                    <div class="section">
-                        <h4>Nombre</h4>
-                        <p>
-                            <%=product.name %>
-                        </p>
-                    </div>
-                    <div class="section">
-                        <h4>Descripción</h4>
-                        <p>
-                            <%= product.description %>
-                        </p>
-                    </div>
-                    <div class="section">
-                        <h4>Precio</h4>
-                        <p>
-                           $ <%=product.price %>
-                        </p>
-                    </div>
-                    <div class="section">
-                        <form action="/" method="post">
-                            <input type="submit" value="Agregar al Carrito">
-                        </form>
-                    </div>
-                    
-                </div>
+        <main class="mainLogin">
+            <div class="mobileProductDetails">
+              <h2><%=product.name %></h2>
             </div>
+            <div class="productImage">
+              <img
+                src=<%=`/images/products/${product.image}` %>
+                alt="Product image"
+                class="productImg"
+              />
             </div>
-        </main>
+            <div class="productDetails">
+              <h5>Categoria</h5>
+              <h2><%=product.name %></h2>
+              <p><%= product.description %></p>
+              <h4>$ <%=product.price %></h4>
+              <button class="cartButton">Agregar al Carrito</button>
+          </main>
+          <footer id="nobackround">
             <%- include('../partials/footer') %>
+            </footer>
     </body>
 
 
