--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -3,25 +3,40 @@
 
     <body>
         <%- include("../partials/header.ejs") %>
-            <main>
-                <form action="/users/login" method="POST">
-                    <header>
-                        <h3>INICIA SESIÓN</h4>
-                    </header>
-                    <div class="form-group">
-                        <span class="error"><%=locals.errors?.form && `${errors.form.msg}`%></span>
+            <main class="mainLogin">
+                <div class="loginImg">
+                  <img src="/images/loginpic.png" alt="" />
+                </div>
+                <div class="loginFormDiv">
+                  <h2 class="bienvenida">Bienvenido de vuelta!</h2>
+                  <span class="error"><%=locals.errors?.form && `${errors.form.msg}`%></span>
+                  <form action="/users/login" method="POST">
+                    <div class="loginForm">
+                      <label for="email">Email:</label>
+                      <input
+                        type="text"
+                        id="email"
+                        name="email"
+                        placeholder="Ej.: ejemplo@mail.com"
+                        value="<%= typeof old != 'undefined' ? old.email : "" %>"
+                      />
                     </div>
-                    <div class="form-group">
-                        <label for="email">Email:</label>
-                        <input type="text" id="email" name="email" placeholder="Ej.: ejemplo@mail.com" value="<%= typeof old != 'undefined' ? old.email : "" %>"/>
+                    <div class="loginForm">
+                      <label for="password">Contraseña:</label>
+                      <input
+                        type="password"
+                        id="password"
+                        name="password"
+                        placeholder="Ingrese su contraseña"
+                        value="<%= typeof old != 'undefined' ? old.password : "" %>"
+                      />
                     </div>
-                    <div class="form-group">
-                        <label for="password">Contraseña:</label>
-                        <input type="password" id="password" name="password" placeholder="Ingrese su contraseña" value="<%= typeof old != 'undefined' ? old.password : "" %>"/>
-                    </div>
-                    <div class="form-control remember">
-                        <label for="remember-me">Recordar usuario</label>
-                        <input type="checkbox" name="rememberMe" id="remember-me">
+                    <div class="formcheckbox">
+                      <div>
+                        <input type="checkbox" name="rememberMe" id="remember-me" />
+                        <label for="remember-me">Recuerdame</label>
+                      </div>
+                      <a href="/password_reset">Olvidaste tu contraseña?</a>
                     </div>
                     <% if (typeof errors != 'undefined') { %>
                         <% errors.forEach(error => { %>
@@ -30,21 +45,18 @@
                          </ul>
                         <% }) %>
                        <% } %>
-                    <div class="form-group form-settings">
-                        <div class="form-options">
-                            <a href="/password_reset">¿Has olvidado tu contraseña?</a>
-                        </div>
+                    <div>
+                      <button type="submit" class="form-login">Login</button>
                     </div>
-                    <div class="form-group">
-                        <button type="submit">Iniciar sesión</button>
+                    <div>
+                      <a href="/users/register" class="form-fork">Creá tu cuenta</a>
                     </div>
-                    <div class="form-fork">
-                        ¿No tienes una cuenta aún?
-                        <a href="/users/register">Creá una cuenta</a>
-                    </div>
-                </form>
-            </main>
-            <%- include('../partials/footer') %>
+                  </form>
+                </div>
+              </main>
+              <footer id="nobackround">
+                <%- include('../partials/footer') %>
+              </footer>
     </body>
 
     </html>
