Bug fix admin product view

--- a/src/views/admin/product.ejs
+++ b/src/views/admin/product.ejs
@@ -2,7 +2,7 @@
 <%- include("../partials/head") %>
 
     <body class="admin">
-        <%- include("/partials/header.ejs") %>
+        <%- include("./partials/header.ejs") %>
             <main>
                 <h1>Consola de administrador</h1>
                     <h2>Producto</h2>
