--- a/src/views/users/profileEdit.ejs
+++ b/src/views/users/profileEdit.ejs
@@ -18,9 +18,9 @@
                 }
             </script>
             <main>
-                <header>
+                <div>
                     <h2>Usuario</h2>
-                </header>
+                </div>
                 <form action=<%=`/users/profileEdit/${user.id}?_method=PUT` %> method="POST"
                     enctype="multipart/form-data">
                     <div class="form-control">
