--- a/src/views/products/detail.ejs
+++ b/src/views/products/detail.ejs
@@ -9,7 +9,7 @@
             </header>
             <div class="detail">
                 <div class="panel">
-                    <img src=<%=`/images/products/${product.image}` %> alt="Product image" width="100%" %>>
+                    <img class="imgP" src=<%=`/images/products/${product.image}` %> alt="Product image" width="100%" %>>
                 </div>
                 <div class="panel">
                     <div class="section">
@@ -30,8 +30,8 @@
                            $ <%=product.price %>
                         </p>
                     </div>
-                    <div class="section">
-                        <form action="/" method="post">
+                    <div class="cartAdd">
+                        <form action="/cart" method="post">
                             <input type="submit" value="Agregar al Carrito">
                         </form>
                     </div>
