--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -604,6 +604,61 @@ form ul.error {
   font-weight: 300;
   text-align: left;
 }
+/*Slider*/
+.container-slider{
+width: 90%;
+max-width: 900px;
+margin: auto;
+overflow: hidden;
+box-shadow: 0 0 0 10px #fff,
+            0 15px 50px;
+position: relative;
+}
+
+.slider{
+display: flex;
+height: 500px;
+width: 500%;
+margin-left: -100%;
+}
+
+.slider__section{
+width: 100%;
+}
+
+.slider__img{
+display: block;
+width: 100%;
+height: 100%;
+object-fit: cover;
+}
+
+.slider__btn{
+position: absolute;
+width: 40px;
+height: 40px;
+background: rgba(255, 255, 255, 0.7);
+top: 50%;
+transform: translateY(-50%);
+font-size: 30px;
+font-weight: bold;
+font-family: monospace;
+text-align: center;
+border-radius: 50%;
+cursor:pointer;
+}
+
+.slider__btn:hover{
+background: #fff;
+}
+
+.slider__btn--left{
+left: 10px;
+}
+
+.slider__btn--right{
+right: 10px;
+}
 
 /*Mobile*/
 @media (max-width: 768px) {
