--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -10,7 +10,7 @@
             </div>
             <div class="atributes">
               <div class="options">
-                <img src="/images/securitysafe.png" alt="" />
+                <img src="/images/security.png" alt="" />
                 <div class="optionsContainer">
                   <h2>PAGÁ</h2>
                   <h2>ONLINE</h2>
@@ -18,7 +18,7 @@
                 </div>
               </div>
               <div class="options">
-                <img src="/images/truckfast.png" alt="" />
+                <img src="/images/truck.png" alt="" />
                 <div class="optionsContainer">
                   <h2>ENVÍOS A</h2>
                   <h2>DOMICILIO</h2>
@@ -26,7 +26,7 @@
                 </div>
               </div>
               <div class="options">
-                <img src="/images/moneys.png" alt="" />
+                <img src="/images/credit.png" alt="" />
                 <div class="optionsContainer">
                   <h2>MEDIOS</h2>
                   <h2>DE PAGO</h2>
@@ -35,10 +35,11 @@
                 </div>
               </div>
             </div>
+            <div class="barra3">
             <p class="frase">
-              Llevá la emoción de viajar contigo a donde quiera que vayas
-            </p>
-          </main>
+              >>> LLEVÁ LA EMOCIÓN DE VIAJAR CONTIGO A DONDE QUIERA QUE VAYAS <<<
+            </div>
+            </main>
           <footer>
 
               <%- include('partials/footer') %>
