--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -4,10 +4,6 @@
     <body id="login">
         <%- include("./partials/header.ejs") %>
         <main>
-            <div class="slogan">
-              <div>VIAJÁ MÁS LIGERO Y</div>
-              <div>MÁS INTELIGENTE</div>
-            </div>
             <div class="atributes">
               <div class="options">
                 <img src="/images/security.png" alt="" />
@@ -40,7 +36,7 @@
               >>> LLEVÁ LA EMOCIÓN DE VIAJAR CONTIGO A DONDE QUIERA QUE VAYAS <<<
             </div>
             </main>
-          <footer>
+          <footer class="background">
 
               <%- include('partials/footer') %>
           </footer>
