--- a/src/views/products/cart.ejs
+++ b/src/views/products/cart.ejs
@@ -111,7 +111,7 @@
               <div>$60.000</div>
             </div>
           </main>
-          <footer id="nobackround">
+          <footer class="background">
            
               <%- include('../partials/footer') %>
           </footer>
