--- a/src/views/products/detail.ejs
+++ b/src/views/products/detail.ejs
@@ -58,7 +58,7 @@
               <h4>$ <%=product.price %></h4>
               <button class="cartButton">Agregar al Carrito</button>
           </main>
-          <footer id="nobackround">
+          <footer class="background">
           
             <%- include('../partials/footer') %>
             </footer>
