--- a/src/views/products/list.ejs
+++ b/src/views/products/list.ejs
@@ -43,7 +43,7 @@
                     </div>
                 </section>
             </main>
-            <footer id="nobackround">
+            <footer class="background">
                
                 <%- include('../partials/footer') %>
             </footer>
