--- a/src/views/users/profile.ejs
+++ b/src/views/users/profile.ejs
@@ -24,7 +24,7 @@
                     <input type="submit" value="Editar">
                 </form>
             </main>
-            <footer id="nobackround">
+            <footer class="background">
                 <%- include('../partials/footer') %>
 
             </footer>
