--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -57,7 +57,7 @@
                   </form>
                 </div>
               </main>
-              <footer id="nobackround">
+              <footer class="background">
                   <%- include('../partials/footer') %>
               </footer>
     </body>
