--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -54,7 +54,7 @@
                   </form>
                 </div>
               </main>
-              <footer id="nobackround">
+              <footer class="background">
                 <%- include('../partials/footer') %>
               </footer>
     </body>
